# hiring

./: .gitattributes  .gitignore  LICENSE  README.md
software-engineering/: .pre-commit-config.yaml  .ruff.toml  INSTRUCTIONS.md  README .md  README.md  TODO.md  schema.yml
software-engineering/backend/: .env.local  pyproject.toml
software-engineering/backend/inspektor/: asgi.py  config.py  manage.py  settings.py  urls.py  views.py  wsgi.py
software-engineering/backend/inspektor/apps/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
software-engineering/backend/inspektor/apps/core/migrations/: 0001_initial.py  0002_image_image_class.py  0002_image_inspection_result.py  0002_inspectionresult.py  0002_result.py  0003_alter_inspection_image_and_more.py
software-engineering/backend/inspektor/apps/core/models/: __init__.py  case.py  image.py  inspection.py
software-engineering/backend/inspektor/apps/ml/: apps.py  models.py  tasks.py  test_tasks.py
software-engineering/docker/: docker-compose.yml
software-engineering/docker/azurite/: Dockerfile  entrypoint.sh
software-engineering/frontend/: .env.development  .gitignore  move_static_files.sh  package.json
software-engineering/frontend/public/: index.html  manifest.json
software-engineering/frontend/src/: App.tsx  index.tsx  router.tsx  utils.tsx
software-engineering/frontend/src/tests/: App.test.tsx
software-engineering/frontend/src/views/: CaseOverview.tsx  CaseResultview.tsx  Dashboard.css  Dashboard.tsx  DashboardTable.css
(+7 files in other folders)
